# emem

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  tests.yml
emem/: __init__.py  config.py  consolidation.py  embeddings.py  memory.py  spatial.py  store.py  tools.py  types.py  working_memory.py
examples/: basic_memory.py  memory_agent.py
harness/: __main__.py  postprocess.py  requirements.txt  run.py  run_benchmark.py
harness/agent/: __init__.py  prompts.py  react_agent.py
harness/benchmarks/: __init__.py  metrics.py  runner.py  scenarios.py
harness/benchmarks/academic/: ablation.py  caption_cache.py  replay_runner.py  trajectory.py
harness/benchmarks/academic/emem_bench_v1/: __init__.py  loader.py  runner.py  schedule.py
harness/benchmarks/academic/loaders/: base.py  emem_bench.py  locomo.py  open_eqa.py  sqa3d.py
harness/benchmarks/academic/scorers/: base.py  emem_bench.py  exact_match.py  f1.py  llm_match.py
harness/benchmarks/emem_bench/: collect_ai2thor.py  collect_procthor.py  collection_utils.py  generate_questions.py
harness/environments/: __init__.py  ai2thor_adapter.py  interoception.py  minigrid_adapter.py  procthor_utils.py
harness/providers/: __init__.py  gemini_embeddings.py  gemini_llm.py  gemini_vlm.py  http.py  ollama_embeddings.py  ollama_llm.py  ollama_vlm.py
tests/: test_callable_providers.py  test_consolidation.py  test_integration.py  test_interoception.py  test_memory.py  test_store.py  test_tools.py  test_types.py  test_working_memory.py
tests/test_harness/: conftest.py  test_ai2thor_adapter.py  test_emem_bench.py  test_gemini_providers.py  test_interoception.py  test_minigrid_adapter.py  test_ollama_common.py  test_ollama_providers.py  test_postprocess.py  test_procthor_utils.py  test_react_agent.py  test_runner.py  test_vlm.py
tests/test_harness/test_academic/: test_caption_cache.py  test_emem_bench_v1_runner.py  test_loaders.py  test_replay_runner.py  test_scorers.py
