[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emem"
version = "0.1.0"
description = "Hybrid graph-based spatio-temporal memory system for embodied agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "All rights reserved. Copyright (c) 2024 Automatika Robotics."}
dependencies = [
    "numpy>=1.24",
    "hnswlib>=0.8",
    "Rtree>=1.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
embeddings = [
    "sentence-transformers>=2.2",
]

[tool.setuptools.packages.find]
include = ["emem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ollama: requires running Ollama server",
    "gemini: requires GEMINI_API_KEY env var",
    "minigrid: requires minigrid installed",
    "ai2thor: requires ai2thor installed",
    "slow: tests taking >30s",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
exclude = ["setup.py", "docs", "build", "log", "install", "examples", "tests", "harness"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*", "^main"]
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"

[tool.ruff]
extend-exclude = [".mypy_cache", ".tox", ".venv", "buck-out", "build", ".pytest_cache"]
fix = true
line-length = 88
preview = true
[tool.ruff.lint]
ignore = ["E203", "E266", "E501", "F403", "F401"]
select = ["B","C","E","F","W","B9"]
[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "(chore) Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
